--- a/Movies-Express/package.json
+++ b/Movies-Express/package.json
@@ -10,6 +10,7 @@
   "author": "jim",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^7.1.2"
   }
 }
